# YOLO-Image-detection-service-Fast-API

./: .gitignore  LICENSE  README.md
image-detection-core/: README.md  pyproject.toml
image-detection-core/src/image_detection_core/: constants.py  save_model.py  version.py
image-detection-core/src/image_detection_core/service/: object_detection_service.py
image-detection-core/src/image_detection_core/yolo/: backbone.py  config.py  functions.py  utils.py  yolov4.py
image-detection-core/tests/example_service_template_core/: test_version.py
image-detection-service/: Dockerfile  README.md  default_config.yml  pyproject.toml  requirements.txt
image-detection-service/script/: request.py  request_image_detection.py
image-detection-service/src/image_detection_service/: app.py  constants.py  metrics.py  run.py  service.py  utils.py  version.py
image-detection-service/src/image_detection_service/api_v1/: image_detection_service.py
image-detection-service/tests/image_detection_service/: test_version.py
image-service-foundation/: .gitignore  README.md  pyproject.toml
image-service-foundation/src/image_service_foundation/: version.py
image-service-foundation/src/image_service_foundation/config/: configuration_manager.py
image-service-foundation/src/image_service_foundation/storage/: dropbox_cloud.py  google_cloud.py  models_provider.py
image-service-foundation/tests/example_service_template_foundation/: test_version.py
