[tool.poetry]
name = "image-detection-core"
version = "0.1.0"
description = ""
authors = ["Anustup Das <anustup@mediadistillery.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
image-service-foundation = "0.1.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.1"
toml = "^0.10.2"
opencv-python = "^4.4.0"
tensorflow = "2.3.0"
absl-py = "1.3.0"
easydict = "1.10"
pillow = "9.2.0"
pytesseract = "0.3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
