[tool.poetry]
name = "image-detection-service"
version = "0.5.1"
description = ""
authors = ["Anustup Das <anustup@mediadistillery.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi="~0.63.0"
pydantic="~1.7.3"
uvicorn="~0.13.3"
numpy = ">=1.16.0,<1.19.0"
prometheus-client = ">=0.6.0"
python-multipart = "^0.0.5"
image-service-foundation = "0.4.0"
image-detection-core = "0.6.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.1"
toml = "^0.10.2"

[tool.poetry.scripts]
image-detection-service_web_start = 'image_detection_service.run:run_cli'
run-cli = "image_detection_service.run:run_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
